--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@dev/web": "1.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
-    "rxjs": "^7.4.0",
-    "web-push": "^3.4.5"
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
