--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "rxjs": "^7.4.0"
   },
